@@ -40,7 +40,7 @@ Imports:
     purrr (>= 0.2.2),
     rlang,
     sandwich (>= 2.3-4),
-    sjlabelled (>= 1.0.0),
+    sjlabelled (>= 1.0.1),
     sjmisc (>= 2.5.0),
     tidyr (>= 0.6.3),
     tibble (>= 1.3.3)
