@@ -87,6 +87,7 @@ export(std_beta)
 export(svy)
 export(svyglm.nb)
 export(table_values)
+export(typical_value)
 export(var_pop)
 export(weight)
 export(weight2)
