@@ -1,5 +1,8 @@
 Version 0.10.3
 ------------------------------------------------------------------------------
+New functions:
+* `typical_value()`, to return the typical value of a variable.
+
 Changes to functions:
 * Computation of `r2()` for `glm`-objects is now based on log-Likelihood methods and also accounts for count models.
 * Better `print()`-method for `overdisp()`.
